--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,24 +1,24 @@
 <resources>
     <string name="app_name" translatable="false">Presently</string>
-    <string name="what_are_you_thankful_for">What are you grateful for?</string>
-    <string name="what_were_you_thankful_for">What were you grateful for?</string>
-    <string name="what_are_you_thankful_for_today">What are you grateful for today?</string>
-    <string name="what_are_you_thankful_for_yesterday">What were you grateful for yesterday?</string>
-    <string name="notification_settings">Settings</string>
-    <string name="privacy_policy">Privacy Policy</string>
-    <string name="read_privacy">Read Presently\'s privacy policy</string>
-    <string name="faq">FAQ</string>
-    <string name="read_faq">Read Presently\'s frequently asked questions</string>
-    <string name="contact_us">Contact Us</string>
-    <string name="terms_conditions">Terms &amp; Conditions</string>
-    <string name="read_tc">Read our terms &amp; conditions</string>
-    <string name="channel_name">Presently Reminder</string>
-    <string name="channel_description">Daily reminders to note what you\'re grateful for</string>
-    <string name="today">Today</string>
-    <string name="yesterday">Yesterday</string>
-    <string name="iwas">I was grateful for</string>
-    <string name="iam">I am grateful for</string>
-    <string name="save">Save</string>
+    <string name="what_are_you_thankful_for">ما هو الشيء الذي تشعر بالامتنان له؟</string>
+    <string name="what_were_you_thankful_for">ما هو الشيء الذي شعرت بالامتنان له؟</string>
+    <string name="what_are_you_thankful_for_today">ما الشيء الذي تشعر بالامتنان له اليوم؟</string>
+    <string name="what_are_you_thankful_for_yesterday">ما الشيء الذي شعرت بالامتنان له البارحة؟</string>
+    <string name="notification_settings">الإعدادات</string>
+    <string name="privacy_policy">سياسة الخصوصية</string>
+    <string name="read_privacy">اقرأ سياسة الخصوصية التابعة لبرزنتلي</string>
+    <string name="faq">أسئلة المتكررة</string>
+    <string name="read_faq">اقرأ أسئلة برزنتلي المتكررة</string>
+    <string name="contact_us">اتصل بنا</string>
+    <string name="terms_conditions">الأحكام والشروط</string>
+    <string name="read_tc">اقرأ أحكام و شروط برزنتلي</string>
+    <string name="channel_name">تذكير برزنتلي</string>
+    <string name="channel_description">تذكير يومي لتدوين ما أنت ممتن له</string>
+    <string name="today">اليوم</string>
+    <string name="yesterday">البارحة</string>
+    <string name="iwas">كنت ممتن ل</string>
+    <string name="iam">أنا ممتن ل</string>
+    <string name="save">احفظ</string>
     <string name="back_up_entries_to_csv">Backup entries</string>
     <string name="export_success">Data exported to Downloads</string>
     <string name="open">Open</string>
